style: fix scroll bar overflowing inside the popup - style: change the background color in light mode

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -80,7 +80,7 @@
   --bew-text-4: hsl(215, 19%, 72%);
   // #endregion
 
-  --bew-bg: hsl(220, 14%, 94%);
+  --bew-bg: hsl(220, 14%, 96%);
 
   --bew-content-opacity: 0.6;
 
